# puppet-client

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/armeabi-v7a/: exelib  signaturewx  wechat.apk  wechat7016.apk  wechat704.apk
app/src/main/assets/web/: index.html
app/src/main/res/drawable/: button_background.xml  button_background_disable.xml  button_background_normal.xml  button_background_press.xml  common_gradient_red.xml  shape_floatwindow.xml
app/src/main/res/layout/: activity_main.xml  activity_qrcode.xml  dialog_update.xml  view_floatwindow.xml  view_floatwindow_out.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
hookdemo/: build.gradle  proguard-rules.pro
hookdemo/src/main/: AndroidManifest.xml
hookdemo/src/main/res/layout/: activity_main.xml
hookdemoplugin/: build.gradle
hookdemoplugin/src/main/: AndroidManifest.xml
hookdemoplugin/src/main/res/values/: strings.xml
loadlibtool/: CMakeLists.txt  build.gradle
loadlibtool/src/androidTest/java/com/mango/loadlibtool/: ExampleInstrumentedTest.java
loadlibtool/src/main/: AndroidManifest.xml
loadlibtool/src/main/assets/armeabi-v7a/: exelib
loadlibtool/src/main/cpp/: fake_dlfcn.cpp  native-lib.cpp
loadlibtool/src/main/java/com/mango/loadlibtool/: CommandTool.java  InjectTool.java  RunningTool.java
loadlibtool/src/main/jni/: injector.c  injector.h  main.c  ptrace.c  utils.c
loadlibtool/src/main/res/values/: strings.xml
loadlibtool/src/test/java/com/mango/loadlibtool/: ExampleUnitTest.java
networkdemo/: build.gradle
networkdemo/src/main/: AndroidManifest.xml
networkdemo/src/main/assets/web/: login.html
networkdemo/src/main/res/layout/: activity_main.xml
plugintest/: build.gradle
plugintest/src/main/: AndroidManifest.xml
puppet/: build.gradle
puppet/src/main/: AndroidManifest.xml
puppetmodel/: build.gradle
transmit/: build.gradle
trojandemo/: build.gradle
trojandemo/src/main/: AndroidManifest.xml
wechattool/: build.gradle
wechattool/src/main/: AndroidManifest.xml
(+140 files in other folders)
